--- a/gb/24/5/29/n14260094.md
+++ b/gb/24/5/29/n14260094.md
@@ -11,39 +11,33 @@
 <p>陈骏季说，对农业部来说，粮食安全是非常重要的议题，特别是以米食为主的国家，稻米产销需达到一定比例的平衡，农业部正在规划更好的方案，借此确保稻农的收益，并让产业往前进步，目前正在做规划，待数字精算后，就会行政院争取经费，后续呈报行政院、并获得同意后，就会对外公布。</p>
 <p>责任编辑：吕美琪</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/6/12/29/n1573182.md#1">公粮收购结束 创造农民32亿元收益</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/7/12/27/n1955703.md#1">公粮收购调涨两元 米价恐跟涨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/8/2/22/n2020421.md#1">公粮收购增2元  23万米农受惠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/11/18/n2726197.md#1">台农委会：后壁稻谷销售受影响  依公粮收购</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/5/9/n3251898.md#1">公粮收购　台农委会：农民已受惠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/20/n3291908.md#1">公粮收购价升  民间收购价稳住</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/13/n4130345.md#1">黄金廊道 未停止公粮收购</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/10/7/n4266324.md#1">翁重钧：再生稻应纳入公粮收购</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/7/n7972827.md#1">水稻收割  农粮署启动宜花东公粮收购</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14563079.md#1">823罢免案、重启和三公投案 国民党团盼民众支持</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/10/n10471335.md#1" target="_blank">《天安门杀戮》挖到六四事件的根</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/7/13/n8093984.md#1" target="_blank">袁斌：绝症病孩得新生，法轮功太神奇了！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/1/n10752825.md#1" target="_blank">共产暴政录：张国焘鄂豫皖根据地肃反</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/22/n3688691.md#1" target="_blank">不再对强盗说“谢谢”</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/8/28/n4514519.md#1">雪水烹团茶美人歌助饮 苏轼回文茶诗映禅趣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/19/n7572375.md#1">两次东山再起的“中华商圣”范蠡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395346.md#1">【古道人生】女子一品夫人命格犯桃花百日遭遇惊悚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/20/n14555810.md#1">【未解之谜】真实的因果轮回 明朝书生前世害命今生还</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542482.md#1">【古道人生】知县皇甫平生三件快意事 不敌一憾事的报应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/25/n14560615.md#1">【军事情报局】泰国柬埔寨开战 F-16大战T-55</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/25/n14560702.md#1">【纪元焦点】央企安全漏洞有多大？6学生丧命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/25/n14560674.md#1">【新闻大家谈】抵御中共 台湾大罢免最后猛攻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14559277.md#1">Costco柯克兰牛奶保质期超长的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14559218.md#1">传北京大中小学内部通知 提前返校不能离京</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14559149.md#1">强势回归 麦当劳新版小吃卷赢得粉丝青睐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/22/n14558496.md#1">高圆圆携女现身机场 6岁瑞娅像长发版赵又廷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14559328.md#1">看书8个月后演神经学家 梁朝伟角逐威尼斯影帝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/24/n14560046.md#1">40岁后角色越来越少？孙俪称准备演奶奶获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14559298.md#1">贝克汉姆剪发失手成秃头 妻子维多利亚笑出声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/22/n14558528.md#1">被陆民巧遇求合照 周润发一句话获赞亲切有趣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/24/n14559528.md#1">把这一物放在门窗旁 可防止瓢虫闯入你家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/22/n14557799.md#1">【旅行趣】关岛：热带天堂的刺激与悠闲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/22/n14558208.md#1">牛油果五大健康好处 怎么吃最营养？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14558810.md#1">女性比男性睡得多是真的吗？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/17/n14553133.md#1">三招强化核心肌力 改善酸痛 减少运动伤害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/5/29/n14260094.htm">蓝委提调高公粮收购价 陈骏季：并非最好选项</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/5/29/n14260094.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
