--- a/gb/24/7/31/n14302177.md
+++ b/gb/24/7/31/n14302177.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>风灾过后忧物价齐涨  陈骏季：将启动联合稽查</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/07/id14302178-699245-600x400.jpg" />
-<h6>农业部长陈骏季31日出席农业部记者会，并在会后接受媒体联访。（赖玟茹／大纪元）
-</h6>
+<h6>农业部长陈骏季31日出席农业部记者会，并在会后接受媒体联访。（赖玟茹／大纪元）</h6>
 <hr>
 <p>【大纪元2024年07月31日讯】（大纪元记者赖玟茹台湾台北报导）近日受凯米台风影响，菜价持续上扬，农业部长陈骏季7月31日表示，有八成短期叶菜类受影响，农民复耕至少3至4周，目前冷藏蔬菜，及冷冻的猪肉、渔产等库存量充足，将视情况释出，后续也将启动跨部会联合稽查，避免不肖业者哄抬物价，请民众不用担心。</p>
 <p>凯米台风致灾性降雨，造成严重农损，农业部公布最新灾损情况，截至31日上午11时止，农业产物及民间设施估计损失计新台币27亿1?618万元，农业方面，估计损失金额17亿5?148万元（含养蜂损失68万元），农作物被害面积2万1?712公顷，损害程度28%；畜产损失金额2亿6?584万元；渔产估计损失金额5亿8?328万元。</p>
@@ -19,39 +18,33 @@
 <p>陈骏季强调，去年国内缺蛋，蛋价飙升速度快，加上当时全世界都在抢蛋，因此没有比照年度计划正式核定，强调进口鸡蛋属于紧急状况，对于审计部提及的多项缺失，后续将充分检讨改进，强化后续行政流程。</p>
 <p>责任编辑：郑桦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/7/10/n14031693.md#1">物价高涨 台前5月实质总薪资近7年首度负成长</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/9/n14112993.md#1">物价又涨逾3% 央行总裁：台湾升息还没结束</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287768.md#1">物价上涨如何省钱？养成19个购物习惯超实用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14563079.md#1">823罢免案、重启和三公投案 国民党团盼民众支持</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14563052.md#1">传不覆议普发现金 政院：还在研议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14563054.md#1">绿批立院延会没意义 蓝促政院编特别预算</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14563061.md#1">南非片面更名台驻处 外交部：研议限制晶片输往南非</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14563056.md#1">传美拒赖清德过境 外交人士批匿名放话挑拨台美关系</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14563059.md#1">赖清德评估是否出访 江启臣：友邦是中华民国存在基础</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14563064.md#1">传美方拒赖清德过境纽约 外交部、AIT回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/17/n10063990.md#1" target="_blank">苏智敏：血腥计生悲歌——帮凶  弃卒  泪水</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/15/n10977516.md#1" target="_blank">生性胆小女博士 遇世纪邪恶却勇敢说不</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772976.md#1" target="_blank">林辉：中共当年盘剥延安人 被骂很“黑”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/8/27/n3668851.md#1" target="_blank">吕溪珍：对大连警察的劝善信</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/8/28/n4514519.md#1">雪水烹团茶美人歌助饮 苏轼回文茶诗映禅趣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/19/n7572375.md#1">两次东山再起的“中华商圣”范蠡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395346.md#1">【古道人生】女子一品夫人命格犯桃花百日遭遇惊悚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/20/n14555810.md#1">【未解之谜】真实的因果轮回 明朝书生前世害命今生还</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542482.md#1">【古道人生】知县皇甫平生三件快意事 不敌一憾事的报应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/25/n14560615.md#1">【军事情报局】泰国柬埔寨开战 F-16大战T-55</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/25/n14560702.md#1">【纪元焦点】央企安全漏洞有多大？6学生丧命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/25/n14560674.md#1">【新闻大家谈】抵御中共 台湾大罢免最后猛攻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14559277.md#1">Costco柯克兰牛奶保质期超长的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14559218.md#1">传北京大中小学内部通知 提前返校不能离京</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14559149.md#1">强势回归 麦当劳新版小吃卷赢得粉丝青睐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/22/n14558496.md#1">高圆圆携女现身机场 6岁瑞娅像长发版赵又廷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14559328.md#1">看书8个月后演神经学家 梁朝伟角逐威尼斯影帝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/24/n14560046.md#1">40岁后角色越来越少？孙俪称准备演奶奶获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14559298.md#1">贝克汉姆剪发失手成秃头 妻子维多利亚笑出声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/22/n14558528.md#1">被陆民巧遇求合照 周润发一句话获赞亲切有趣</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/24/n14559528.md#1">把这一物放在门窗旁 可防止瓢虫闯入你家</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/22/n14557799.md#1">【旅行趣】关岛：热带天堂的刺激与悠闲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/22/n14558208.md#1">牛油果五大健康好处 怎么吃最营养？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14558810.md#1">女性比男性睡得多是真的吗？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/17/n14553133.md#1">三招强化核心肌力 改善酸痛 减少运动伤害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652088.md#1">【直播】众议院民主党领袖杰弗里斯举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651089.md#1">专家：经济不稳 中共政治局会议泄焦虑情绪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650949.md#1">韩喜剧艺人朴娜莱涉霸凌 宣布暂停演艺活动　</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/7/31/n14302177.htm">风灾过后忧物价齐涨  陈骏季：将启动联合稽查</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302177.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
